--- a/Lab00.ipynb
+++ b/Lab00.ipynb
@@ -32,25 +32,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "VA0C-y1O9seO",
-        "outputId": "9450b2df-01b1-4ec5-e44e-083af45217d0"
+        "outputId": "bbdf49f3-3aa2-49e5-d6c7-5f69b1db1926"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'\\nYou can write comments on multiple lines by placing the text between the lines of quotation marks. This cell does nothing now until you write some code below...\\n'"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!!!\n"
+          ]
         }
       ],
       "source": [
@@ -59,7 +55,7 @@
         "\"\"\"\n",
         "You can write comments on multiple lines by placing the text between the lines of quotation marks. This cell does nothing now until you write some code below...\n",
         "\"\"\"\n",
-        "\n"
+        "print ('Hello World!!!')\n"
       ]
     },
     {
@@ -69,6 +65,38 @@
       },
       "source": [
         "Now it's your turn to change this notebook. **Below this cell, add a text cell by clicking on the '+Text' button at the top of this notebook.** You can add whatever text you would like. **Then below that cell, add a cell of code by clicking the '+Code' button at the top of this notebook. Write code to print your name in that cell and run the code.**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is my first coding assignment"
+      ],
+      "metadata": {
+        "id": "hrKztEKWHX61"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print ('Elias Williams')"
+      ],
+      "metadata": {
+        "id": "zGMFf9FAHkes",
+        "outputId": "7764fd44-f1ce-4229-d6dc-e50a8da14499",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Elias Williams\n"
+          ]
+        }
       ]
     },
     {
