--- a/Lab02.ipynb
+++ b/Lab02.ipynb
@@ -35,17 +35,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "O2m4hak_va-j"
       },
       "outputs": [],
       "source": [
         "# Variables to keep track of responses that show preferences for each House\n",
-        "# You do not need to change the code in this cell and will use these variables \n",
+        "# You do not need to change the code in this cell and will use these variables\n",
         "# for the rest of the lab\n",
         "# The name of each variable is a House and you will increment if the user\n",
-        "# response shows preference for that House. \n",
+        "# response shows preference for that House.\n",
         "gryffindor = 0\n",
         "hufflepuff = 0\n",
         "ravenclaw = 0\n",
@@ -58,16 +58,32 @@
         "id": "LCUmYgcomFGg"
       },
       "source": [
-        "## Q1: "
+        "## Q1:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "5DUZ_9hPmxCi"
+        "id": "5DUZ_9hPmxCi",
+        "outputId": "ca693ad7-4513-4adf-8b49-0f284eb7972e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "After I have passed away, I want people to remember me as:\n",
+            "  1) The Good\n",
+            "  2) The Great\n",
+            "  3) The Wise\n",
+            "  4) The Bold\n"
+          ]
+        }
+      ],
       "source": [
         "# Question 1\n",
         "print('After I have passed away, I want people to remember me as:')\n",
@@ -89,13 +105,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "LLzzUjIGwZix"
+        "id": "LLzzUjIGwZix",
+        "outputId": "2ce54ac9-6067-424d-f979-7aec8e465d01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Please enter your number choice: 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Prompt user to enter number choice and save the number entered as a variable."
+        "# TODO: Prompt user to enter number choice and save the number entered as a variable.\n",
+        "answer = eval(input(\"Please enter your number choice: \"))"
       ]
     },
     {
@@ -104,29 +133,26 @@
         "id": "5yNGFER9xNjc"
       },
       "source": [
-        "In the following cell, **based on the response from the user, increment the appropriate House count**. You will complete the conditional statement as specified in the comments. Right now it always prints good choice. (Why?)"
+        "In the following cell, **based on the response from the user, increment the appropriate House count**. You will complete the conditional statement as specified in the comments. Right now it always prints invalid choice. (Why?)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "_lGcvdh5xw6C"
       },
       "outputs": [],
       "source": [
-        "# Change this if statement as specified in the comments\n",
-        "if # TODO: Check whether user's input is 1:\n",
-        "    pass # TODO: increment hufflepuff\n",
-        "\n",
-        "# TODO: else if the user's input is 1, increment hufflepuff\n",
-        "# TODO: else if the user's input is 2, increment slytherin\n",
-        "# TODO: else if the user's input is 3, increment ravenclaw\n",
-        "# TODO: else if the user's input is 4, increment gryffindor\n",
-        "\n",
-        "# Error handling: What happens if the user's input is not 1, 2, 3, or 4?\n",
-        "# This else clause can be kept as is\n",
-        "else:\n",
+        "if answer == 1:  # Check whether user's input is 1\n",
+        "    hufflepuff += 1  # Increment hufflepuff\n",
+        "elif answer == 2:  # If the user's input is 2, increment slytherin\n",
+        "    slytherin += 1\n",
+        "elif answer == 3:  # If the user's input is 3, increment ravenclaw\n",
+        "    ravenclaw += 1\n",
+        "elif answer == 4:  # If the user's input is 4, increment gryffindor\n",
+        "    gryffindor += 1\n",
+        "else:  # Error handling: What happens if the user's input is not 1, 2, 3, or 4?\n",
         "    print('Invalid choice')"
       ]
     },
@@ -141,11 +167,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "ncutxJBKniMh"
+        "id": "ncutxJBKniMh",
+        "outputId": "3c961732-3cf1-4e5d-d011-f78575ab4472",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Q2) Dawn or Dusk?\n",
+            "  1) Dawn\n",
+            "  2) Dusk\n"
+          ]
+        }
+      ],
       "source": [
         "print('Q2) Dawn or Dusk?')\n",
         "print('  1) Dawn')\n",
@@ -154,13 +194,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "6dSl_gTHzfBm"
+        "id": "6dSl_gTHzfBm",
+        "outputId": "3172b830-bebd-4a47-cc52-0585a5f2c81e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Select 1 or 21\n",
+            "You chose dawn.\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Prompt user to enter number choice and save the number entered as a variable."
+        "# TODO: Prompt user to enter number choice and save the number entered as a variable.\n",
+        "answer  = eval(input(\"Select 1 or 2\"))\n",
+        "\n",
+        "if answer == 1:\n",
+        "  print(\"You chose dawn.\")\n",
+        "elif answer == 2:\n",
+        "  print(\"You chose dusk.\")\n",
+        "else:\n",
+        "  print(\"Invalid choice\")"
       ]
     },
     {
@@ -174,17 +235,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "Xf2dy7QWz1iQ"
       },
       "outputs": [],
       "source": [
-        "# Change this statement as specified to increment the appropriate house based on \n",
+        "# Change this statement as specified to increment the appropriate house based on\n",
         "# the user response\n",
-        "if # User's input is 1:\n",
+        "#if # User's input is 1:\n",
+        "\n",
+        "if answer == 1:\n",
+        "  gryffindor += 1\n",
+        "  ravenclaw += 1\n",
+        "elif answer == 2:\n",
+        "  hufflepuff += 1\n",
+        "  slytherin += 1\n",
+        "\n",
+        "  # TODO: increment gryffindor and ravenclaw\n",
         "  pass\n",
-        "# TODO: else if the answer is 1, increment gryffindor and ravenclaw\n",
         "# TODO: else if the answer is 2, increment hufflepuff and slytherin\n",
         "# The else clause can be left as is\n",
         "else:\n",
@@ -202,11 +271,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "jDZDhGLQ08b0"
+        "id": "jDZDhGLQ08b0",
+        "outputId": "1aa25180-99c5-4b70-fcc5-2199cd050ed4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Which kind of instrument most pleases your ear?\n",
+            "  1) The violin\n",
+            "  2) The trumpet\n",
+            "  3) The piano\n",
+            "  4) The drum\n"
+          ]
+        }
+      ],
       "source": [
         "# Question 3\n",
         "print('Which kind of instrument most pleases your ear?')\n",
@@ -218,13 +303,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
-        "id": "yn1MVik70-X6"
+        "id": "yn1MVik70-X6",
+        "outputId": "29876353-f98e-4d84-ecc4-697842e5cfa7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Please enter your number choice: 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Prompt user to enter number choice and save the number entered as a variable."
+        "# TODO: Prompt user to enter number choice and save the number entered as a variable.\n",
+        "answer = eval(input(\"Please enter your number choice: \"))"
       ]
     },
     {
@@ -238,15 +336,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "XSZb06PT1S59"
       },
       "outputs": [],
       "source": [
-        "# Change this statement as specified to increment the appropriate house based on \n",
+        "# Change this statement as specified to increment the appropriate house based on\n",
         "# the user response\n",
-        "if # User's input is 1:\n",
+        "#if # User's input is 1:\n",
+        "\n",
+        "if answer == 1:\n",
+        "  slytherin += 1\n",
+        "elif answer == 2:\n",
+        "  hufflepuff += 1\n",
+        "elif answer == 3:\n",
+        "  ravenclaw += 1\n",
+        "elif answer == 4:\n",
+        "\n",
         "    pass # TODO: increment slytherin\n",
         "# TODO: else if the answer is 2, increment hufflepuff\n",
         "# TODO: else if the answer is 3, increment ravenclaw\n",
@@ -268,11 +375,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "GWIPxLAS2ZgN"
+        "id": "GWIPxLAS2ZgN",
+        "outputId": "225b80e7-02fc-436e-e924-33bfd25df6d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Do roads in nature tempt you the most?\n",
+            "  1) Yes\n",
+            "  2) No\n",
+            "Please enter a number to answer:1\n"
+          ]
+        }
+      ],
       "source": [
         "print('Do roads in nature tempt you the most?')\n",
         "print('  1) Yes')\n",
@@ -293,36 +415,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "id": "mCuyN8JZqPhI"
+        "id": "mCuyN8JZqPhI",
+        "outputId": "bb2ac53c-c5fd-496f-f2c3-a3b8d7698f02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Do you prefer:\n",
+            "1) The wide, sunny grassy lane\n",
+            "2) The twisting, leaf-strewn path through woods\n",
+            "Enter your choice (1 or 2): 2\n"
+          ]
+        }
+      ],
       "source": [
         "if select == 1:\n",
-        "    pass\n",
+        "    print(\"Do you prefer:\")\n",
+        "    print(\"1) The wide, sunny grassy lane\")\n",
+        "    print(\"2) The twisting, leaf-strewn path through woods\")\n",
         "\n",
-        "    # TODO: Ask user if they prefer\n",
-        "    # 1) The wide, sunny grassy lane\n",
-        "    # 2) The twisting, leaf-strewn path through woods\n",
+        "    response = int(input(\"Enter your choice (1 or 2): \"))\n",
         "\n",
-        "    # TODO: Save response as integer\n",
+        "    if response == 1:  # If grassy lane, increment hufflepuff\n",
+        "        hufflepuff += 1\n",
+        "    elif response == 2:  # If woods, increment gryffindor\n",
+        "        gryffindor += 1\n",
         "\n",
-        "    # TODO: If grassy lane, increment hufflepuff\n",
-        "    # TODO: If woods, increment gryffindor\n",
-        "    # No need to worry about error checking\n",
         "elif select == 2:\n",
-        "    pass\n",
+        "    print(\"Do you prefer:\")\n",
+        "    print(\"1) The narrow, dark, lantern-lit alley\")\n",
+        "    print(\"2) The cobbled street lined with ancient buildings\")\n",
         "\n",
-        "    # TODO: Ask user if they prefer\n",
-        "    # 1) The narrow, dark, lantern-lit alley\n",
-        "    # 2) The cobbled street lined with ancient buildings\n",
-        "    \n",
-        "    # TODO: Save response as integer\n",
-        "    \n",
-        "    # TODO: If alley, increment slytherin\n",
-        "    # TODO: If cobbled street, increment ravenclaw\n",
-        "    # No need to worry about error checking\n",
+        "    response = int(input(\"Enter your choice (1 or 2): \"))\n",
+        "\n",
+        "    if response == 1:  # If alley, increment slytherin\n",
+        "        slytherin += 1\n",
+        "    elif response == 2:  # If cobbled street, increment ravenclaw\n",
+        "        ravenclaw += 1\n",
+        "\n",
         "else:\n",
         "    print('Invalid choice')\n"
       ]
@@ -339,40 +476,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "TM3VQOMVtiU4"
+        "id": "TM3VQOMVtiU4",
+        "outputId": "26ce5530-0884-49e4-cc7a-611b5adb46e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Congradulations on being sorted into... Gryffindor!\n"
+          ]
+        }
+      ],
       "source": [
-        "# Let's make a string variable to keep track of the house.\n",
         "house = 'None'\n",
-        "\n",
-        "# Let's keep track of the max_count\n",
         "max = 0\n",
-        "\n",
-        "# How can you find the House with the max count?\n",
-        "# Remember that in the event of a tie, the user should be sorted into\n",
-        "# the House in alphabetical order, so\n",
-        "# Gryffindor before Hufflepuff before Ravenclaw before Slytherin\n",
-        "# Could comparing house counts in that order help you find the max?\n",
-        "\n",
-        "# if gryffindor is more than the current max, \n",
-        "# update max and set house to 'Gryffindor'\n",
         "if gryffindor > max:\n",
         "    house = 'Gryffindor'\n",
         "    max = gryffindor\n",
+        "if hufflepuff > max:\n",
+        "    house = 'Hufflepuff'\n",
+        "    max = hufflepuff\n",
+        "if ravenclaw > max:\n",
+        "    house = 'Ravenclaw'\n",
+        "    max = ravenclaw\n",
+        "if slytherin > max:\n",
+        "    house = 'Slytherin'\n",
+        "    max = slytherin\n",
         "\n",
-        "# TODO: Check if Hufflepuff is more than the current max\n",
-        "# TODO: Check if Ravenclaw is more than the current max\n",
-        "# TODO: Check if Slythern is more than the current max\n",
         "\n",
-        "# The following code does not need to be changed.\n",
-        "# If the user entered all invalid responses and no house has any counts\n",
-        "# the user cannot be sorted into a house, so it is fine if house is 'None'\n",
-        "# at this point\n",
         "\n",
-        "print('Congrats on being sorted into...' + house + '!')"
+        "print('Congradulations on being sorted into... ' + house + '!')"
       ]
     },
     {
