--- a/Lab03.ipynb
+++ b/Lab03.ipynb
@@ -18,7 +18,7 @@
         "# Lab 03 Heat-Check\n",
         "In this lab you will practice writing functions that print results to the user and that return values.\n",
         "\n",
-        "## From Celsius to Fahrenheit \n",
+        "## From Celsius to Fahrenheit\n",
         "\n",
         "In class we presented a function that, given a temperature in Celsius, will print the temperature in Fahrenheit. We include it below as an example that you will use for the next function.\n",
         "\n"
@@ -26,11 +26,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "Rt0kFDWS9RJU"
+        "id": "Rt0kFDWS9RJU",
+        "outputId": "ac4b85e5-b253-4387-ab0c-4286056b5868",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0 C == 32.0 F\n"
+          ]
+        }
+      ],
       "source": [
         "def print_as_fahrenheit(c):\n",
         "    f = ((9.0 / 5.0) * c) + 32.0\n",
@@ -48,23 +60,35 @@
       "source": [
         "## From Fahrenheit to Celsius\n",
         "\n",
-        "Using the function `print_as_fahrenheit` for how to make the conversion between Fahrenheit and Celsius, **write a function `print_as_celsius(f)`**. This function should take as input a temperature in Fahrenheit and print the temperature in Celsius. We have given an example of how it should be printed for the example above. "
+        "Using the function `print_as_fahrenheit` for how to make the conversion between Fahrenheit and Celsius, **write a function `print_as_celsius(f)`**. This function should take as input a temperature in Fahrenheit and print the temperature in Celsius. We have given an example of how it should be printed for the example above."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "NMcvm3E4-sl_"
+        "id": "NMcvm3E4-sl_",
+        "outputId": "b175f91f-b341-431d-84f7-086b511a9304",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32.0 F == 0.0 C\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: Write a function that, given a temperature in Fahrenheit, prints the \n",
-        "# temperature in Celsius. The conversion is subtract 32, then multiply by 5/9.\n",
-        "#\n",
-        "# Call this function print_as_celsius().\n",
+        "def print_as_celsius(fahrenheit):\n",
+        "    celsius = (fahrenheit - 32) * 5 / 9\n",
+        "    print(f'{fahrenheit} F == {celsius:.1f} C')\n",
         "\n",
-        "print('32.0 F == 0.0 C') # This is sample output! Make sure to do this for real."
+        "\n",
+        "print_as_celsius(32.0)"
       ]
     },
     {
@@ -79,11 +103,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "fpq9XjRC_TJG"
+        "id": "fpq9XjRC_TJG",
+        "outputId": "3a37bc01-8b4d-4e2a-d348-cc97031da7e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "37 C == 98.60000000000001 F\n",
+            "98.6 F == 37.0 C\n",
+            "100 C == 212.0 F\n",
+            "0 F == -17.8 C\n"
+          ]
+        }
+      ],
       "source": [
         "# This code will only work once you write your function above.\n",
         "# Check that the results are consistent.\n",
@@ -91,6 +130,8 @@
         "print_as_celsius(98.6)\n",
         "\n",
         "# TODO: Can you add two more calls to your function to make sure that it\n",
+        "print_as_fahrenheit(100)\n",
+        "print_as_celsius(0)\n",
         "# works properly?"
       ]
     },
@@ -101,22 +142,19 @@
       },
       "source": [
         "## Converting from miles to meters\n",
-        "In the following cell, **write a function called `miles_to_meters` that, given a number of miles, *returns* the number of meters**. Remember that one mile is 1.60934 kilometers and 1 kilometer is 1000 meters, so there are 1,609.34 meters in one mile. "
+        "In the following cell, **write a function called `miles_to_meters` that, given a number of miles, *returns* the number of meters**. Remember that one mile is 1.60934 kilometers and 1 kilometer is 1000 meters, so there are 1,609.34 meters in one mile."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "gLFgAtynBorm"
       },
       "outputs": [],
       "source": [
-        "# TODO: Write the function miles_to_meters.\n",
-        "# - Single argument is a number of miles.\n",
-        "# - Return value should be the number of meters.\n",
-        "# - Nothing needs to be printed to the screen.\n",
-        "# - We will test the code in the following cell.\n"
+        "def miles_to_meters(miles):\n",
+        "    return miles * 1609.34\n"
       ]
     },
     {
@@ -131,11 +169,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "jvIpU4DECTli"
+        "id": "jvIpU4DECTli",
+        "outputId": "fbfd81ac-7ff9-4093-a808-aa3b95f64875",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 miles == 8046.7 meters\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Code in this cell will not work until you have written miles_to_meters\n",
         "mile_test = 5\n",
@@ -160,15 +210,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "OvRHXmU5EcOw"
+        "id": "OvRHXmU5EcOw",
+        "outputId": "bb372229-4b61-4013-a34c-c9e0dd17b80e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO: write calculate_total function\n",
-        "# Parameters: float for price, integer for percent\n",
-        "# Returns: float for total price with percent increase"
+        "def calculate_total(price, percent):\n",
+        "    return price * (1 + percent / 100)\n",
+        "\n",
+        "total_price = calculate_total(100.0, 20)\n",
+        "print(total_price)"
       ]
     },
     {
@@ -183,11 +247,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "zn6Si5SZP-lg"
+        "id": "zn6Si5SZP-lg",
+        "outputId": "e45e6f8e-2276-4102-e65b-5f27e15253e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "91.71249999999999\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-aef3c046b7b9>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_result\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_result\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m91.7125\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcalculate_total\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m36.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAssertionError\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
         "test_price = 79.75\n",
         "test_percent = 15\n",
@@ -197,9 +285,15 @@
         "#\n",
         "# - TODO: Print the new total\n",
         "\n",
-        "# We use this code to test your function. Do not modify these.\n",
+        "\n",
+        "\n",
+        "test_result = calculate_total(test_price, test_percent)\n",
+        "\n",
+        "\n",
+        "print(test_result)\n",
+        "\n",
         "assert(test_result == 91.7125)\n",
-        "assert(calculate_total(30, 20) == 36.0)"
+        "assert(calculate_total(30, 20) == 36.0)\n"
       ]
     },
     {
